<resources>
    <string name="app_name">Inten Application</string>
    <string name="move_with_result">Pindah Activity Untuk Result</string>
    <string name="dial_number">Dial A Number</string>
    <string name="move_with_object">Pindah Activity Dengan Object</string>
    <string name="move_with_data">Pindah Activity Dengan Data</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Data Diterima</string>
    <string name="object_received">Object Diterima</string>
    <string name="this_is_moveactivity">Ini MOveActivity</string>
</resources>