<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/move_activity"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_move_with_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/move_with_data"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_move_with_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/move_with_object"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/dial_number"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_move_with_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/move_with_result"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

</LinearLayout>